# learning-opengl

./: .gitmodules  CMakeLists.txt  Makefile  run.sh
include/glad/: glad.h
lib/: glad.cpp
shaders/: colors.frag  colors.vert  frag_lamp.glsl  lamp.frag  reflect.frag  reflect.vert  screen-quad.frag  screen-quad.vert  stencil-test.vert  transparent.frag
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  utils.cpp
